--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@ html, body {
 }
 
 body {
-  background: url(../images/backgrounds/architecture.jpg) center no-repeat;
+  background-image: none;
+  background-color: aquamarine;
+  background-image: -o-linear-gradient(to right, #ff0000, #00ff00);
   background-size: cover;
   background-attachment: fixed;
   font-family: Helvetica, Arial, sans-serif;
@@ -26,7 +28,7 @@ body {
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: #000;
 }
 
 h1 {
@@ -40,9 +42,10 @@ h2 {
 }
 
 h3 {
-  font-family: 'Gabriela', serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5em;
   margin-top: .5em;
+  text-decoration: underline;
 }
 
 img {
@@ -52,12 +55,15 @@ img {
 }
 
 p {
-  font-size: 1em;
+  font-size: 18px;
+  font-family: fantasy;
 }
 
 a {
-  color: black;
+  color: blueviolet;
   text-decoration: none;
+  font-family: cursive;
+  font-size: larger;
 }
 
 a:hover {
